<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:paddingStart="25dp"
    android:paddingTop="50dp"
    android:paddingEnd="25dp"
    android:paddingBottom="25dp"
    tools:context=".ui.main.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:contentDescription="@string/ztm_logo"
        android:src="@drawable/logo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/choose_conveyance"
        android:textColor="@android:color/black"
        android:textSize="25sp" />

    <Spinner
        android:id="@+id/conveance_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/conveyances"
        android:padding="10dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/enter_line_number"
        android:textColor="@android:color/black"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/line_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/line_number_hint"
        android:importantForAutofill="no"
        android:inputType="number"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="15sp" />

    <Button
        android:id="@+id/main_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:padding="15dp"
        android:text="@string/main_button"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

</LinearLayout>